# rl-control-template

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  Pipfile  README.md  config.json  dev-setup.sh  pyproject.toml  requirements.txt  setup.cfg
analysis/: learning_curve.py  learning_curves-over_param.py  param-sensitivity.py
clusters/: cedar.json  home.json  optuna_cedar.json
experiments/atari_example/Atari/: DQN.json  EQRC.json  generate.py
experiments/example/: DQN.json  EQRC.json  ESARSA.json  SARSA.json  learning_curve.py
experiments/optuna_example/: learning_curve.py
experiments/replay_example/: learning_curve.py
scripts/: local.py  local_node_venv.sh  missing_stats.py  setup_cc.sh  slurm.py  slurm_across_nodes.py
src/: continuing_main.py  main.py  optuna_tuning.py
src/agents/: AC_TC.py  BaseAgent.py  DQN.py  EQRC.py  ESARSA.py  SARSA.py  registry.py
src/algorithms/: AC_TC.py  BaseAgent.py  DQN.py  EQRC.py  ESARSA.py  registry.py
src/algorithms/nn/: DQN.py  (+2 more)
src/analysis/: colors.py  confidence_intervals.py  learning_curve.py  results.py  sensitivity_curve.py
src/environments/: Atari.py  Forager.py  Gym.py  Minatar.py  MountainCar.py
src/experiment/: ExperimentModel.py  OptunaExperiment.py  tools.py
src/problems/: Acrobot.py  Atari.py  BaseProblem.py  Breakout.py  Cartpole.py  Forager.py  Minatar.py  MountainCar.py  registry.py
src/representations/: TileCoder.py  networks.py
src/utils/: Collector.py  ReplayBuffer.py  arrays.py  checkpoint.py  chex.py  fp.py  hk.py  iterators.py  jax.py  plotting.py  policies.py  preempt.py  random.py  results.py  rlglue.py
tests/: run-all-examples.sh
typings/numba/: __init__.pyi
(+34 files in other folders)
